Add output_test1 with a single test from demo_tests.
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@1488 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/unittest/output_test1.tmpl
+++ b/unittest/output_test1.tmpl
@@ -1,11 +1,11 @@
-FLAGS \[phb=0, fm=0\]
+pure-happens-before=yes fast-mode=no ignore-in-dtor=no
 
 WARNING: Possible data race during write of size 4 at [x01-9A-Z]+: {{{
    T2 .test-thread-2. .locks held: .L\d+..:
-    #0  RaceReportDemoTest::Thread2.. .*demo_tests.cc:49
+    #0  RaceReportDemoTest::Thread2.. .*output_test1.cc:22
   Concurrent write.s. happened at .OR AFTER. these points:
    T1 .test-thread-1. .locks held: .L\d+..:
-    #0  RaceReportDemoTest::Thread1.. .*demo_tests.cc:44
+    #0  RaceReportDemoTest::Thread1.. .*output_test1.cc:17
   Address [x01-9A-Z]+ is 0 bytes inside data symbol ".+"
   Locks involved in this report .reporting last lock sites.: .L\d+, L\d+.
    L\d+
