--- a/unittest/output_test1.tmpl
+++ b/unittest/output_test1.tmpl
@@ -1,4 +1,4 @@
-pure-happens-before=yes fast-mode=no ignore-in-dtor=no
+hybrid=no
 WARNING: Possible data race during write of size 4 at [x01-9A-Z]+: {{{
    T2 .test-thread-2. .locks held: .L\d+..:
     #0  Thread2.. .*output_test1.cc:13
